# GlassBox

./: .dockerignore  .gitignore  Dockerfile  README.md  railway.json
backend/: .env.example  pyproject.toml
backend/glassbox/: __init__.py  config.py  control.py  models.py  orchestrator.py
backend/glassbox/execution/: twak.py  twak_cli.py
backend/glassbox/perception/: cmc.py  market.py  onchain.py  regime.py
backend/glassbox/reasoning/: memory.py  reasoner.py
backend/glassbox/risk/: gate.py
backend/glassbox/storage/: log.py  state.py
backend/glassbox/verify/: anchor.py
backend/rules/: rulebook.yaml  token_allowlist.json
backend/tests/: test_execution_exits.py  test_gate.py  test_integration_live.py  test_reconcile.py  test_twak_cli.py
deploy/: com.glassbox.live.plist  run_live.sh  start.sh
docs/: DEPLOY.md  HACKATHON.md  LIVE_RUNBOOK.md  README.md  SETUP.md  STRATEGY.md
frontend/: README.md  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/components/: AgentConsole.tsx  BrainPanel.tsx  ConnectWallet.tsx  DepositButton.tsx  DeskTabs.tsx  DrawdownGauge.tsx  EquityChart.tsx  GridScan.css  GridScan.tsx  Landing.tsx  LivePreview.tsx  LogoMarquee.tsx  Nav.tsx  Positions.tsx  PriceChart.tsx  PrivyConnect.tsx  Providers.tsx  ReasoningFeed.tsx  RippleGrid.css  RippleGrid.tsx  Spotlight.tsx  Toaster.tsx  TokenIcon.tsx  TopBar.tsx  TradingViewChart.tsx  TxHistory.tsx  WalletPanel.tsx  ui.tsx
frontend/lib/: backend.ts  format.ts  guard.ts  toast.ts  types.ts  usePolling.ts
(+14 files in other folders)
